fix: youlag-active where user uses bottom navigation, some feed content could be misaligned due to margin

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1289,6 +1289,7 @@ body.youlag-active:not(.reader) main#stream div.flux {
       
       & > .content {
         max-width: 100%;
+        margin: 0;
       } 
     }
   }
